[package]
name = "kryptokrona-service"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>", "n9lsjr"]
description = "Kryptokrona Service library in Rust."
license = "BSD 3-Clause License"
repository = "https://github.com/kryptokrona/kryptokrona-rust-sdk"
rustc = "1.69.0"

[dependencies]
